# eden-rewrite

./: .editorconfig  .gitignore  Cargo.toml  README.md
.cargo/: config.toml
crates/eden-config/: Cargo.toml
crates/eden-config-derive/: Cargo.toml  README.md
crates/eden-config-derive/src/: attributes.rs  lib.rs
crates/eden-config-derive/src/optional/: mod.rs  strukt.rs
crates/eden-config-derive/src/validate/: mod.rs  strukt.rs
crates/eden-config/src/: context.rs  editable.rs  handle.rs  lib.rs  root.rs  validation.rs
crates/eden-config/src/migrations/: mod.rs  v2.rs
crates/eden-config/src/types/: mod.rs  sentry.rs  setup.rs  token.rs
crates/eden-config/src/types/background_jobs/: mod.rs
crates/eden-config/src/types/bot/: mod.rs  primary_guild.rs  token.rs  validators.rs
crates/eden-config/src/types/database/: common.rs  mod.rs  pool.rs
crates/eden-config/src/types/gateway/: metrics.rs  mod.rs  validators.rs
crates/eden-config/src/types/organization/: discord.rs  minecraft.rs  mod.rs  validators.rs
crates/eden-config/tests/: cases.rs  live.rs
crates/eden-config/tests/cases/fail/background_jobs_worker_is_zero/: eden.toml  error.snap
crates/eden-config/tests/cases/fail/database_pool_min_is_greater_than_max_1/: eden.toml
crates/eden-config/tests/cases/fail/database_pool_min_is_greater_than_max_2/: eden.toml  error.snap
crates/eden-config/tests/cases/fail/database_pool_min_is_greater_than_max_3/: eden.toml  error.snap
crates/eden-config/tests/cases/fail/database_replica_writable_1/: eden.toml  error.snap
crates/eden-config/tests/cases/fail/inexplicit_configuration_for_db_pool_1/: eden.toml
crates/eden-config/tests/cases/fail/inexplicit_configuration_for_db_pool_2/: eden.toml  error.snap
crates/eden-config/tests/cases/fail/inexplicit_configuration_for_db_pool_3/: eden.toml  error.snap
crates/eden-config/tests/cases/fail/invalid_gateway_tls_paths_1/: eden.toml  error.snap
crates/eden-config/tests/cases/fail/invalid_gateway_tls_paths_2/: eden.toml  error.snap
crates/eden-config/tests/cases/fail/invalid_mc_perk_identifier_1/: eden.toml  error.snap
crates/eden-config/tests/cases/fail/invalid_sentry_environment_1/: eden.toml  error.snap
crates/eden-config/tests/cases/fail/invalid_sentry_traces_sample_rate_1/: eden.toml  error.snap
crates/eden-config/tests/cases/fail/invalid_token_1/: eden.toml  error.snap
crates/eden-config/tests/cases/migration/v2_bot/: config.snap  eden.toml  new_document.snap  schema.snap
crates/eden-config/tests/cases/migration/v2_gateway_tls/: config.snap  new_document.snap  schema.snap
crates/eden-config/tests/cases/migration/v2_sentry/: config.snap  eden.toml  migration_cases.snap  schema.snap
crates/eden-config/tests/cases/pass/background_jobs_1/: eden.toml  output.snap
crates/eden-config/tests/cases/pass/bot_primary_guild_1/: eden.toml  error.snap
crates/eden-config/tests/cases/template/: output.snap
crates/eden-config/tests/common/: mod.rs
crates/eden-database/: Cargo.toml
crates/eden-database-pools/: Cargo.toml
crates/eden-database-pools/src/: lib.rs  tests.rs
crates/eden-database/src/: lib.rs  mc_edition.rs  minecraft.rs  snowflake.rs  testing.rs
crates/eden-database/src/extractors/: ip_addr_string.rs  mod.rs
crates/eden-database/src/migrations/: mod.rs
crates/eden-database/src/model/: background_job.rs  chaos.rs  contributor.rs  linked_mc_account.rs  linked_mc_account_view.rs  logged_in_event.rs  mc_account.rs  mc_account_challenge.rs  mc_login_event.rs  member.rs  member_view.rs  mod.rs  settings.rs  staff.rs
crates/eden-database/src/testing/: krate.rs  mod.rs
crates/eden-database/tests/: pool.rs  timestamp.rs
crates/eden-database/tests/snapshots/: flags_should_work_with_members_with_multiple_roles.snap  should_find_linked_mc_account_by_mc_uuid.snap  should_find_linked_mc_account_view_by_mc_uuid.snap  should_find_member.snap  should_include_an_inviter.snap  should_include_contributor_flag_if_member_is_contributor.snap  should_include_staff_flag_if_member_is_admin.snap  should_include_staff_flag_if_member_is_staff.snap  should_insert_mc_login_event_from_guest.snap  should_insert_mc_login_event_from_mc_account.snap  should_insert_member.snap  should_link_mc_account.snap  should_upsert_member.snap
crates/eden-env-vars/: Cargo.toml
crates/eden-env-vars/src/: lib.rs
crates/eden-file-diagnostics/: Cargo.toml
crates/eden-file-diagnostics/src/: lib.rs
crates/eden-file-diagnostics/src/renderer/: mod.rs
crates/eden-file-diagnostics/src/renderer/snapshots/: eden_file_diagnostics__renderer__tests__render_error_with_label.snap  eden_file_diagnostics__renderer__tests__render_multiline_diagnostic.snap  eden_file_diagnostics__renderer__tests__render_note.snap  eden_file_diagnostics__renderer__tests__render_simple_error.snap  eden_file_diagnostics__renderer__tests__render_warning.snap  eden_file_diagnostics__renderer__tests__render_with_multiple_labels.snap
crates/eden-metrics/: Cargo.toml
crates/eden-metrics/src/: lib.rs
crates/eden-metrics/src/prometheus/: macros.rs  mod.rs
crates/eden-paths/: Cargo.toml
crates/eden-paths/src/: lib.rs
crates/eden-postgres/: Cargo.toml
crates/eden-postgres-pools/: Cargo.toml
crates/eden-postgres-pools/src/: lib.rs  tests.rs
crates/eden-postgres/src/: embedded.rs  error.rs  lib.rs  tests.rs
crates/eden-postgres/src/pool/: error.rs  mod.rs  test_builder.rs
crates/eden-sensitive/: Cargo.toml
crates/eden-sensitive/src/: lib.rs
crates/eden-signals/: Cargo.toml
crates/eden-signals/src/: lib.rs  shutdown.rs
crates/eden-sqlx-sqlite/: Cargo.toml
crates/eden-sqlx-sqlite/src/: error.rs  lib.rs  pool.rs
crates/eden-sqlx-sqlite/tests/: error_types.rs
crates/eden-timestamp/: Cargo.toml
crates/eden-timestamp/src/: lib.rs  tests.rs
crates/eden-toml/: Cargo.toml
crates/eden-toml/src/: lib.rs
crates/eden-toml/src/snapshots/: eden_toml__tests__diagnostic_emit.snap
crates/erased-report/: Cargo.toml
crates/erased-report/src/: lib.rs
xtask/: Cargo.toml
xtask/src/: flags.rs  main.rs
xtask/src/test/: mod.rs
(+98 files in other folders)
