[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "2.3.0"
authors = ["memothelemo <dev@memothelemo.xyz>"]
edition = "2024"
license = "AGPL-2.0"
repository = "https://github.com/Dystopiko/eden"
rust-version = "1.94.0"
publish = false

[workspace.dependencies]
# Data types
chrono = { version = "0.4.44", features = ["serde"] }
dashmap = { version = "6.1.0", features = ["serde"] }
uuid = { version = "1.21.0", features = ["v4", "serde"] }

# CLI
clap = { version = "4.5.13", features = ["derive", "env"] }

# Error handling
erased-report = { path = "crates/erased-report" }
error-stack = "0.6.0"
thiserror = "2.0.18"

# Encoding, cryptography and string processing
hex = "0.4.3"
percent-encoding = "2.3.2"
sha2 = "0.10.9"
unindent = "0.2.4"

# Essentials for making proc-macro crates
proc-macro2 = "1.0.106"
quote = "1.0.45"
syn = "2.0.117"

# Testing
criterion = { default-features = false, version = "0.5" }
claims = "0.8.0"
insta = { version = "1.46.3", features = ["json", "serde"] }
pretty_assertions = "1.4.1"
tempfile = "3.25.0"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml_edit = { version = "0.25.3", features = ["serde"] }

# Async crates
futures = "0.3.32"
tokio = { version = "1.49.0", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["full"] }

# RNGs
rand = "0.10.1"

# Twilight ecosystem
twilight-cache-inmemory = "0.17.1"
twilight-gateway = "0.17.1"
twilight-http = "0.17.1"
twilight-mention = "0.17.0"
twilight-model = "0.17.1"
twilight-util = { version = "0.17.0", features = ["builder", "permission-calculator"] }

# Tracing & diagnostics
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

# Useful helpers
bon = "3.9.0"
validator = { version = "0.20.0", features = ["derive"] }

[workspace.lints]
