[package]
name = "xtask"
description = "A collection of custom build and utility tasks for the Eden backend repository."
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
eden-env-vars = { path = "../crates/eden-env-vars" }
eden-paths = { path = "../crates/eden-paths" }
erased-report = { path = "../crates/erased-report" }
error-stack = { workspace = true }

env_logger = "0.11.9"
log = "0.4.29"
tempfile = { workspace = true }
which = "8.0.1"
xflags = "0.3.2"
xshell = "0.2.7"

[lints]
workspace = true
