[package]
name = "eden-config"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
eden-config-derive = { path = "../eden-config-derive" }
eden-file-diagnostics = { path = "../eden-file-diagnostics" }
eden-toml = { path = "../eden-toml" }

constant_time_eq = "0.4.2"
doku = "0.21.1"
serde = { workspace = true }
toml_edit = { workspace = true }

[lints]
workspace = true
