[package]
name = "eden-config"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
eden-config-derive = { path = "../eden-config-derive" }
eden-env-vars = { path = "../eden-env-vars" }
eden-file-diagnostics = { path = "../eden-file-diagnostics" }
eden-paths = { path = "../eden-paths" }
eden-sensitive = { path = "../eden-sensitive" }
eden-test-util = { path = "../eden-test-util" }
eden-toml = { path = "../eden-toml" }

arc-swap = "1.9.1"
bon = { workspace = true }
constant_time_eq = "0.4.2"
doku = "0.21.1"
error-stack = { workspace = true }
indexmap = { version = "2.14.0", features = ["serde"]}
semver = { version = "1.0.28", features = ["serde"] }
sentry-core = "0.47.0"
serde_with = "3.18.0"
serde = { workspace = true }
thiserror = { workspace = true }
toml_edit = { workspace = true }
tokio = { workspace = true }
twilight-model = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
serde_json = { workspace = true }
serde_test = "1.0.177"

[lints]
workspace = true
