[package]
name = "eden-database-pools"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
eden-metrics = { path = "../eden-metrics" }
eden-sqlx-sqlite = { path = "../eden-sqlx-sqlite" }

bon = { workspace = true }
error-stack = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
dashmap = { workspace = true }
eden-config = { path = "../eden-config" }
eden-test-util = { path = "../eden-test-util" }
tokio = { workspace = true }

[lints]
workspace = true
