[package]
name = "eden-database"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
eden-config = { path = "../eden-config" }
eden-env-vars = { path = "../eden-env-vars" }
eden-postgres = { path = "../eden-postgres" }
eden-timestamp = { path = "../eden-timestamp" }
erased-report = { path = "../erased-report" }

bon = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
error-stack = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
scoped-futures = "0.1.4"
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
twilight-model = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
bitflags = { version = "2.11.1", features = ["std"] }

[dev-dependencies]
claims = { workspace = true }
eden-test-util = { path = "../eden-test-util" }
insta = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
