[package]
name = "eden-metrics"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish.workspace = true

[features]
default = ["prometheus"]

[dependencies]
error-stack = { workspace = true }
thiserror = { workspace = true }

[dependencies.prometheus]
version = "0.14.0"
default-features = false
optional = true

[lints]
workspace = true
