[package]
name = "eden-postgres-pools"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
eden-metrics = { path = "../eden-metrics" }
eden-postgres = { path = "../eden-postgres" }

bon = { workspace = true }
error-stack = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
dashmap = { workspace = true }
eden-config = { path = "../eden-config" }
eden-test-util = { path = "../eden-test-util" }
sqlx = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
