[package]
name = "eden-postgres"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
eden-config = { path = "../eden-config" }

erased-report = { workspace = true }
error-stack = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
claims = { workspace = true }
eden-test-util = { path = "../eden-test-util" }

[lints]
workspace = true
