[package]
name = "eden-signals"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
futures = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
