[package]
name = "eden-timestamp"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
chrono = { workspace = true }
error-stack = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
twilight-model = { workspace = true }

[dev-dependencies]
claims = { workspace = true }
eden-sqlx-sqlite = { path = "../eden-sqlx-sqlite" }
eden-test-util = { path = "../eden-test-util" }
tokio = { workspace = true }

[lints]
workspace = true
