[package]
name = "erased-report"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
error-stack = { workspace = true}

[dev-dependencies]
claims = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
